--- a/client/src/styles/_project.scss
+++ b/client/src/styles/_project.scss
@@ -214,6 +214,9 @@
 
 @media screen and (max-width: 500px) {
   .project {
+    &__header {
+      align-items: flex-start;
+    }
     &__name {
       font-size: 20px;
     }
@@ -237,8 +240,13 @@
       font-size: 10px;
     }
     &__action-buttons-container {
+      flex-direction: column;
       div {
-        margin-right: 20px;
+        margin-right: 0px;
+        margin-bottom: 5px;
+        &:last-of-type {
+          margin-bottom: 0px;
+        }
         svg,
         a svg {
           font-size: 20px;
